--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dr. Zerquera - Gestión Médica</title>
+    <meta name="description" content="Gestione sus citas y comuníquese con el Dr. Zerquera de forma fácil y segura." />
+    <meta name="theme-color" content="#083C70" />
+    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="apple-touch-icon" href="/assets/zimi-logo.png" sizes="180x180">
     <script>
       // Aplica el tema inmediatamente para evitar FOUC (Flash of unstyled content)
       if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
