--- a/index.html
+++ b/index.html
@@ -17,31 +17,9 @@
         document.documentElement.classList.remove('dark');
       }
     </script>
-  <script type="importmap">
-{
-  "imports": {
-    "vite-plugin-pwa": "https://esm.sh/vite-plugin-pwa@^1.0.2",
-    "@google/genai": "https://esm.sh/@google/genai@^1.14.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "react/": "https://esm.sh/react@^19.1.1/",
-    "react": "https://esm.sh/react@^19.1.1",
-    "dotenv": "https://esm.sh/dotenv@^17.2.1",
-    "path": "https://esm.sh/path@^0.12.7",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.0.0",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.8.1",
-    "cors": "https://esm.sh/cors@^2.8.5",
-    "express": "https://esm.sh/express@^5.1.0",
-    "vite": "https://esm.sh/vite@^7.1.2",
-    "pg": "https://esm.sh/pg@^8.16.3",
-    "jwt-decode": "https://esm.sh/jwt-decode@^4.0.0",
-    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.2",
-    "bcryptjs": "https://esm.sh/bcryptjs@^3.0.2"
-  }
-}
-</script>
 </head>
   <body class="bg-bg-main dark:bg-bg-dark text-text-main dark:text-light">
     <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="/frontend/src/index.tsx"></script>
   </body>
 </html>
